--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -17,3 +17,12 @@ jobs:
           import platform
           print(platform.processor())
         shell: python  #on which shell/programm to use, like bash by default
+  run-windows-command:
+    runs-on: windows-latest
+    steps:
+      - name: Directory Powershell
+        run: Get-Location
+      - name: Directory bash
+        run: pwd
+        shell: bash
+  
