--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -19,6 +19,7 @@ jobs:
         shell: python  #on which shell/programm to use, like bash by default
   run-windows-command:
     runs-on: windows-latest
+    needs: ['run-shell-command']
     steps:
       - name: Directory Powershell
         run: Get-Location
