--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,7 +8,7 @@ jobs:
     steps:        
       - name: Checkout
         #uses: actions/checkout@v1 # clone the repo to VM(runner) not always required   ( @v3 or or master  or can be any commit)
-        run: |       # if you need to use linux command -> run
+        run: |       # if you need to use linux command -> run  # can't be uses and run in 1 workflow
           pwd
           ls
           echo $GITHUB_SHA
