--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -5,11 +5,20 @@ env:
    WF_ENV: ${{ secrets.WF_ENV }} # additing from git secrets also i have ${{ secret.GITHUB_TOKEN }} for dispatch event
 
 jobs:
-  create_issue:  # using git.token with git rest-api
+  create_issue:  # using git.token with git rest-api; create issue in git
     runs-on: ubuntu-latest
     permissions:
       issues: write 
     steps:
+      - name: Push a random file
+      #git remote add origin "git@github.com:Garmonovm/github-action-test.git"  we can't donwload via ssh as no keys on vm
+      # to authenticate use github token or standatd clonning
+      #not full example, push then file to git...
+        run: |
+          pwd
+          ls -a
+          git init
+          git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git" 
       - name: Create issue using REST API
         run: |
           curl --request POST \
