--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,5 +1,5 @@
 name: ENV Variables
-on: push
+on: pull_request
 env:
   #WF_ENV: Available to all jobs   # env in the job
    WF_ENV: ${{ secrets.WF_ENV }} # additing from git secrets also i have ${{ secret.GITHUB_TOKEN }} for dispatch event
