--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,5 +1,5 @@
 name: Actions Workflow
-
+on: pull_request
 # on:
 #   push:
 #      branches-ignore:  # will start in all branches exept master and feauture
