--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -6,9 +6,11 @@ on: pull_request
 jobs:
   run-shell-command:
     runs-on: ubuntu-latest
+   #timeout-minutes: 360  -maximum time of job or step. or it will be cancelled; 360 is by default so you need to increase it
     steps:
       - name: echo a string
         run: echo "Hello World"
+       # continue-on-error: true  # to run all other stepd if this one failed
       - name: multiline script
         run: |      # to use multiple commands and do not type each time run: command 
           node -v
